--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -4,6 +4,7 @@ name: Manual workflow
 
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
+
 on:
   workflow_dispatch:
     # Inputs the workflow accepts.
@@ -23,7 +24,7 @@ jobs:
   # This workflow contains a single job called "greet"
   greet:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
